# doc-retrieval-api

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
datastore/: factory.py
server/: main.py
